# Rust-Weather

./: .gitignore  Cargo.toml  Dockerfile  README.md  create_topic.sh  docker-compose.yml
.github/workflows/: deploy.yml
docker/: init_db_schema.sql
src/: config.rs  logging.rs  main.rs
src/air_models/: air_model.rs  api_model.rs  mod.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/traits/: data_fetcher.rs  data_loader.rs  mod.rs
